guestbook/guestbook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ui
  namespace: guestbook
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    external-dns.alpha.kubernetes.io/hostname: "pfuscheramwerk.de"
spec:
  tls:
    - hosts:
        - gb.pfuscheramwerk.de
      secretName: tls-gbpaw-ingress
  rules:
    - host: gb.pfuscheramwerk.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-ui
                port:
                  number: 80
